Fix player button interaction on tablet

--- a/css/works_mq2.css
+++ b/css/works_mq2.css
@@ -102,5 +102,11 @@
     #playerControls div.magic-hover {
       padding: 5px 7px;
     }
+    #playerControls {
+      pointer-events: none;
+    }
+    #controlsWrapper {
+      pointer-events: all;
+    }
   }
 }
